syntax = "proto3";

package worker;

option go_package = "cs425-mp4/worker";

service Worker {
    // Jobs called on by the coordinator
    /// NOTE: None of this should be client-facing
    /// Previous MP services
    rpc Put (File) returns (Ack) {}
    rpc Get (File) returns (File) {} // *Do not pass `bytes file` parameter as input
    rpc Delete (File) returns (Ack) {} // *
    rpc GetVersion(FileVersions) returns (File) {} // *
    /// MP4 services
    rpc Train (Job) returns (Ack) {}
    rpc Inference (stream Query) returns (stream QueryResults) {}
    rpc RestartInference (InferenceRequest) returns (Ack) {}
    
    // Network topology services
    rpc ElectStandby (Empty) returns (Ack) {}
    rpc UpdateActive (Coordinator) returns (Ack) {}
    rpc GetActive (Empty) returns (Coordinator) {}
}

message Job {
    // Modify this to be individual strings of specific parameters
    // Decided when model is decided
    int32 job_id = 1;
}

message Query {
    repeated int32 job_id = 1;
    int32 model_id = 2;
}

message Ack {
    bool done = 1;
}

message QueryResults {
    // Not sure what the results should be - is this a classification problem?
    bytes results = 1;
    repeated float times = 2;
}

message Empty {
}

message File {
    string file_name = 1;
    bytes file = 2;
}

message FileVersions {
    string file_name = 1;
    int32 versions = 2;
}

message Coordinator {
    string ip = 1;
}

message InferenceRequest {
    int32 num_queries = 1;
    string coordinator = 2;
}